# RecursiveMD5

./: .gitignore  LICENSE.md  README.md  RecursiveMD5.py  main.py  pyproject.toml  setup.py
src/recursivemd5/: recursivemd5.py
